--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -2,3 +2,13 @@
     background-color: #F8F8F8;
     border-color: #E7E7E7;
 }
+
+.navbar-brand {
+	padding: 0px;
+}
+
+.navbar-brand>img {
+  height: 100%;
+  padding: 1px;
+  width: auto;
+}
